--- a/Decision_Tree_Case_Study.ipynb
+++ b/Decision_Tree_Case_Study.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "PM-aeWSQYi6Y",
         "colab": {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "7Vxn4MtKotMZ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         },
         "outputId": "91672915-73dc-4ab9-b0de-07653e401bf1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +631,7 @@
         },
         "outputId": "8a77340d-a7d1-4274-9ff4-f01118afc0ad"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,7 +780,7 @@
         },
         "outputId": "2a3f4512-6f2b-4d21-9224-0d9bbd784989"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -867,7 +867,7 @@
         },
         "outputId": "e78b2af1-0a3a-4284-9673-4ad1ec875cba"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,7 +973,7 @@
         },
         "outputId": "d7eb609f-ceea-41e7-9ec2-15c761e69155"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1031,7 @@
         },
         "outputId": "69e8ab56-0baa-4e88-99c8-d8a079cfd81f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,7 +1184,7 @@
         },
         "outputId": "eee6dac6-d847-498b-c431-cb7f99b16062"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1297,7 +1297,7 @@
         },
         "outputId": "20e6799f-afbd-46dd-b53c-67c0b8c93412"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1361,6 +1361,47 @@
       "metadata": {
         "id": "N28YS0n9bWSL"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import scipy.stats as stats\n",
+        "\n",
+        "def entropy(s):\n",
+        "    prob = np.bincount(s)/len(s)\n",
+        "    return stats.entropy(prob, base=2)\n",
+        "\n",
+        "def information_gain(parent, left_child, right_child):\n",
+        "    weighted_entropy = entropy(left_child)*(len(left_child)/len(parent)) + entropy(right_child)*(len(right_child)/len(parent))\n",
+        "    info_gain = entropy(parent) - weighted_entropy\n",
+        "    return info_gain\n",
+        "\n",
+        "def best_split(features,labels):\n",
+        "    best_threshold = None\n",
+        "    best_info_gain = -1\n",
+        "\n",
+        "    # For every unique value of that feature\n",
+        "    for threshold in np.unique(features):\n",
+        "\n",
+        "        y_left = labels[np.where(threshold >=  features)]  #list of labels in left child\n",
+        "        y_right = labels[np.where(threshold <  features)]  #list of labels in right child\n",
+        "\n",
+        "        if len(y_left) > 0 and len(y_right) > 0:\n",
+        "            # Caclulate the information gain and save the split parameters if the current split if better then the previous best\n",
+        "            gain = information_gain(labels, y_left, y_right)\n",
+        "\n",
+        "            if gain > best_info_gain:\n",
+        "                best_threshold = threshold\n",
+        "                best_info_gain = gain\n",
+        "\n",
+        "    return best_threshold"
+      ],
+      "metadata": {
+        "id": "NkI8x38TyxHs"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
