--- a/Decision_Tree_Case_Study.ipynb
+++ b/Decision_Tree_Case_Study.ipynb
@@ -1404,6 +1404,62 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "def find_attr(attr1, attr2, y):\n",
+        "    '''\n",
+        "    attr1 : Attribute1\n",
+        "    attr2: Attribute2\n",
+        "    y: The class labels\n",
+        "\n",
+        "    '''\n",
+        "    attr1 = np.asarray(attr1)\n",
+        "    attr2 = np.asarray(attr2)\n",
+        "    y = np.asarray(y)\n",
+        "\n",
+        "    #calculate the entropy of the parent node\n",
+        "    par_entropy = entropy(y)\n",
+        "\n",
+        "    m = len(y)\n",
+        "\n",
+        "    #if we split using the attr1\n",
+        "    y_10 = y[attr1==0]  #this node consists of all the observations where attr1 has value 0\n",
+        "    entr_10 = entropy(y_10)\n",
+        "    y_11 = y[attr1==1]  #this node consists of all the observations where attr1 has value 1\n",
+        "    entr_11 = entropy(y_11)\n",
+        "    y_12 = y[attr1==2]  #this node consists of all the observations where attr1 has value 2\n",
+        "    entr_12 = entropy(y_12)\n",
+        "\n",
+        "    #Calculate the information gain for attribute 1\n",
+        "    info_gain_1 = par_entropy - (weights(y_10, y)* entr_10 + weights(y_11, y)*entr_11 +  weights(y_12, y)*entr_12)\n",
+        "    info_gain_1 = np.round(info_gain_1, 2)\n",
+        "\n",
+        "    #if we split using the attr2\n",
+        "    y_20 = y[attr2==0]  #this node consists of all the observations where attr2 has value 0\n",
+        "    entr_20 = entropy(y_20)\n",
+        "    y_21 = y[attr2==1]  #this node consists of all the observations where attr1 has value 1\n",
+        "    entr_21 = entropy(y_21)\n",
+        "\n",
+        "    #Calculate the information gain for attribute 2\n",
+        "    info_gain_2 = par_entropy - (weights(y_20, y)* entr_20 + weights(y_21, y)* entr_21  )\n",
+        "    info_gain_2 = np.round(info_gain_2, 2)\n",
+        "\n",
+        "    #return the attribute name along with corresponding info_gain for which information gain is higher if used in splitting\n",
+        "    return (\"attribute1\", info_gain_1) if info_gain_1 > info_gain_2 else (\"attribute2\", info_gain_2)\n",
+        "\n",
+        "def weights(child, parent):\n",
+        "    return len(child)/len(parent)\n"
+      ],
+      "metadata": {
+        "id": "2pfb-7a6y82M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\n",
