--- a/Decision_Tree_Case_Study.ipynb
+++ b/Decision_Tree_Case_Study.ipynb
@@ -2027,6 +2027,219 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "[5, 8, 9, 5, 0, 0, 1, 7, 6, 9, 2, 4, 5, 2, 4, 2, 4, 7, 7, 9]\n",
+        "'''\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "# Get the dataset as an input and convert it to a NumPy array\n",
+        "dataset = eval(input())\n",
+        "dataset = np.asarray(dataset)\n",
+        "\n",
+        "# Function to calculate the mean of a list of numbers\n",
+        "def mean(numbers):\n",
+        "    return sum(numbers) / float(len(numbers))\n",
+        "\n",
+        "# Print the true mean of the dataset\n",
+        "print('True Mean: %.3f' % mean(dataset))\n",
+        "\n",
+        "# Function to create a subsample of the dataset with replacement\n",
+        "def subsample(dataset, ratio=1.0):\n",
+        "    sample = list()\n",
+        "    n_sample = int(len(dataset) * ratio)  # Calculate the number of samples to draw based on the ratio\n",
+        "    while len(sample) < n_sample:\n",
+        "        index = np.random.randint(len(dataset))  # Randomly pick an index from the dataset\n",
+        "        sample.append(dataset[index])  # Append the observation at the picked index to the sample\n",
+        "    return sample\n",
+        "\n",
+        "# Set a random seed for reproducibility\n",
+        "np.random.seed(1)\n",
+        "\n",
+        "# Define the ratio of the dataset to use for creating bootstrap samples\n",
+        "ratio = 0.10\n",
+        "for n_bootstrap in [1, 10, 100]:\n",
+        "    sample_means = list()  # List to store the means of each bootstrap sample\n",
+        "    for i in range(n_bootstrap):\n",
+        "        sample = subsample(dataset, ratio)  # Draw a subsample from the dataset\n",
+        "        sample_mean = mean(sample)  # Calculate the mean of the subsample\n",
+        "        sample_means.append(sample_mean)\n",
+        "    # Print the estimated mean from the bootstrap samples\n",
+        "    print('Samples=%d, Estimated Mean: %.3f' % (n_bootstrap, mean(sample_means)))"
+      ],
+      "metadata": {
+        "id": "yMMU4z8cmOJI",
+        "outputId": "d7b34a8a-9f56-4cae-9a0c-e287ff79f908",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-24-2585300356.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Get the dataset as an input and convert it to a NumPy array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "attr1 for train data = [0, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n",
+        "attr2 for train data = ['c', 'b', 'c', 'c', 'b', 'c', 'a', 'a', 'a', 'b']\n",
+        "tar for train data = [0, 0, 1, 1, 1, 1, 0, 1, 1, 0]\n",
+        "attr1 for test data = [1, 1, 0, 1, 1]\n",
+        "attr2 for test data = ['a', 'c', 'b', 'a', 'b']\n",
+        "'''\n",
+        "\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Input data\n",
+        "a = eval(input())\n",
+        "b = eval(input())\n",
+        "c = eval(input())\n",
+        "d = eval(input())\n",
+        "e = eval(input())\n",
+        "\n",
+        "train = pd.DataFrame({'attr1': a, 'attr2': b, 'tar': c})\n",
+        "test = pd.DataFrame({'attr1': d, 'attr2': e})\n",
+        "\n",
+        "# Function to replace string values with integers\n",
+        "def str_column_to_int(dataset, column):\n",
+        "    unique = sorted(dataset[column].unique())\n",
+        "    lookup = {value: i for i, value in enumerate(unique)}\n",
+        "    dataset[column] = dataset[column].map(lookup)\n",
+        "    return dataset\n",
+        "\n",
+        "# Replace string values in train and test data\n",
+        "train = str_column_to_int(train, 'attr2')\n",
+        "test = str_column_to_int(test, 'attr2')\n",
+        "\n",
+        "# Initialize the classifier\n",
+        "tree = DecisionTreeClassifier()\n",
+        "\n",
+        "# Fit the model with the attributes and target of the training data\n",
+        "X_train = train[['attr1', 'attr2']]\n",
+        "Y_train = train['tar']\n",
+        "tree.fit(X_train, Y_train)\n",
+        "\n",
+        "# Predict the target for the observations in the test\n",
+        "X_test = test[['attr1', 'attr2']]\n",
+        "pred = tree.predict(X_test)\n",
+        "\n",
+        "print(pred)\n"
+      ],
+      "metadata": {
+        "id": "gTgyvjRUmav1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train = [[-1.3866988473336963, -1.4659283769652018, 0.21908962542114993, -0.5705832721154885, -0.39026284294183144], [-0.7420732896222481, -0.08018384934842993, 3.289428542039212, -0.2964031797183057, -1.125040628296576], [0.21851716927727832, 1.0189924747916534, -0.7926306280393199, -0.2962365155662698, 0.9186990330562381], [0.3301766397890254, -0.16234277642612435, 0.7791050210600118, -0.2789394183794175, -0.35256672506010045], [-0.5564673667894178, 0.5994216521345357, 0.40496709263900627, 0.13789108254811427, -1.6797693374581222], [-0.4720940445492414, 0.7586066378374584, 0.11238256186733482, -0.04938846752263362, 0.9002597707743003], [0.6349076398170301, 0.1836763524015007, 1.1110767907487034, 0.45180245509492484, -0.4783224076406436], [-1.283707351437791, 0.6660298150052364, 1.5696565285122108, -0.6888351361949948, -0.8067418148384723], [1.4486773262255297, 1.1533634571229343, 0.25142391222574634, 0.2030471272777417, -0.9163693858589892], [0.2348414093321201, -0.9172108964271672, 0.9729754272245916, 1.3780385868308136, -0.09055892098596163], [0.6354361842373741, -0.8190222254833313, -0.00038109394560143146, -0.4358096089529283, -1.0552640440044254], [0.39286286277430754, 1.1227932444987576, -0.4560006105768751, 1.540942085589407, 0.8198553203534422], [-0.015930330301621193, 0.1549232280701, -1.4180291585154143, -2.1379838467838814, 1.220286714782214], [-0.19670287799839387, -0.49256946476607977, 0.3263897035897652, 0.742732407535864, 1.0944787425334823], [-0.2585046029453902, 0.15014998302969798, -0.45023021276200786, 0.4195424096764816, 1.0271758933897448]]\n",
+        "Y_train = [0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1]\n",
+        "X_valid = [[-1.0242005313937477, 0.976281826209692, -0.08920283415553125, 1.3788073908145468, -1.910582206697658], [-0.5261119238131993, -0.3443793123408228, -0.27647010369805974, -0.922859596433698, 1.1023500179176688], [-1.3564905359324015, -0.8475433541986344, 0.18234188313329097, -0.6098825928188724, 1.16813242929799], [1.5023509595263478, 0.25117399808101465, 1.4985390708977253, -1.0426432774270358, 1.3538360431859358], [-2.124074148585913, 1.9821906863146135, 1.2206529386813578, -0.5057455727664389, -0.9943646677180753], [0.008449083666056009, -0.916539897668125, -1.4137008074570467, 1.6437768066205727, 1.0730437206988162], [0.692291104684553, 0.8290740382224973, -0.8614162963750803, -0.5663186573498192, 0.9446455766399413], [1.1510791022492721, -1.2216360043806689, -1.6227635183877651, -1.9345051157994586, -0.5498461748799024], [-0.7861882343032912, 0.8254785094597348, 0.06800567662367255, -0.7727384191587424, 0.87627995234417], [0.4207745468774598, -0.8274281056562529, -0.03974762336921463, -0.0005562277737053338, 0.8612479876410026]]\n",
+        "Y_valid = [0, 1, 1, 1, 0, 1, 1, 0, 1, 1]"
+      ],
+      "metadata": {
+        "id": "9RcBjk9dmx4Q"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import random forest\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import numpy as np\n",
+        "np.random.seed(0)\n",
+        "\n",
+        "X_train = eval(input())\n",
+        "Y_train = eval(input())\n",
+        "X_valid = eval(input())\n",
+        "Y_valid = eval(input())\n",
+        "\n",
+        "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 2)]\n",
+        "max_depth = [int(x) for x in np.linspace(10, 110, num = 2)]\n",
+        "\n",
+        "#initialize the max_accuracy\n",
+        "max_accuracy = 0\n",
+        "\n",
+        "#2d list\n",
+        "hyperparameters = []\n",
+        "#add all the possible combinations of the hyperparameters, each combination as a list\n",
+        "#YOUR CODE GOES HERE\n",
+        "for i in n_estimators:\n",
+        "    for j in max_depth:\n",
+        "        hyperparameters.append((i,j))\n",
+        "\n",
+        "\n",
+        "\n",
+        "#YOUR CODE ENDS HERE\n",
+        "\n",
+        "#iterate through all the possible combinations\n",
+        "for k in range(len(hyperparameters)) :\n",
+        "\n",
+        "    #equate the hyperparameters\n",
+        "    model = RandomForestClassifier(n_estimators=hyperparameters[k][0],max_depth=hyperparameters[k][1])\n",
+        "\n",
+        "    model.fit( X_train, Y_train )\n",
+        "\n",
+        "    # Prediction on validation set\n",
+        "    Y_pred = model.predict( X_valid )\n",
+        "    #calculate the accuracy of y_pred\n",
+        "    curr_accuracy = accuracy_score(Y_valid,Y_pred)\n",
+        "\n",
+        "    #update the max_accuracy\n",
+        "    if max_accuracy < curr_accuracy :\n",
+        "        max_accuracy = curr_accuracy\n",
+        "\n",
+        "print(np.round(max_accuracy, 2))"
+      ],
+      "metadata": {
+        "id": "v6RbOJQFmuV4",
+        "outputId": "3f3416f8-ea68-4a16-be0e-1ee5947aeb77",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-26-4133402335.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mX_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mY_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mX_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
     }
   ]
 }
